chore: replace konvoyer cli tools with equivalent golang package
Signed-off-by: Ilona Shishov <Ilona.Shishov@gmail.com>

--- a/replica-builder/install-builder/infinity.yaml
+++ b/replica-builder/install-builder/infinity.yaml
@@ -1,31 +1,14 @@
 application:
   name: Infinity
   namespaces:
-    - name: holdings
-      mandatory-params:
-        configMaps:
-          - name: holdings-api-config
-            param: DATABASE_KEY
-          - name: holdings-api-config
-            param: POSTGRESQL_CONNECTIONURL
-        secrets:
-          - name: holdingsdbsecret
-            param: DB_PASS_ENCRYPTION_KEY
-          - name: holdingsdbsecret
-            param: PASSWORD
-          - name: holdingsdbsecret
-            param: USER_NAME
-    - name: party
-      mandatory-params:
-        configMaps:
-          - name: party-api-config
-            param: DATABASE_KEY
-          - name: party-api-config
-            param: POSTGRESQL_CONNECTIONURL
-        secrets:
-          - name: partydbsecret
-            param: DB_PASS_ENCRYPTION_KEY
-          - name: holdingsdbsecret
-            param: PASSWORD
-          - name: holdingsdbsecret
-            param: USER_NAME
+  - name: holdings
+    mandatory-params:
+    - configMap: holdings-api-config
+      params:
+      - DATABASE_KEY
+      - POSTGRESQL_CONNECTIONURL
+  - name: party
+    mandatory-params:
+    - configMap: party-api-config
+      params:
+      - POSTGRESQL_CONNECTIONURL
