chore: refactored application deployer to recieve yaml config as input
Signed-off-by: Ilona Shishov <Ilona.Shishov@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-/replica-builder/install-builder/output/
+/replica-builder/install-builder/output*/
+/replica-builder/replica-installer/output*/
+/replica-builder/install-builder/infinity.yaml
+/replica-builder/replica-installer/infinity.yaml
