chore: added cluster config
Signed-off-by: Ilona Shishov <Ilona.Shishov@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /replica-builder/exporter/output*/
 /replica-builder/deployer/output*/
-/replica-builder/exporter/infinity.yaml
-/replica-builder/deployer/infinity.yaml
+/replica-builder/exporter/infinity*.yaml
+/replica-builder/deployer/infinity*.yaml
