Reviewed folder structure to have only exporter and deployer main folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .*.swp
-exporter/results/
-/replica-builder/exporter/output*/
-/replica-builder/deployer/output*/
-/replica-builder/exporter/infinity*.yaml
-/replica-builder/deployer/infinity*.yaml
+*/results/
+*/output*/
+*/infinity*.yaml
+/old/
