docs: Reviewed examples to introduce clusterId in configs

--- a/examples/deployer-app-and-cluster.yaml
+++ b/examples/deployer-app-and-cluster.yaml
@@ -1,8 +1,9 @@
 deployer:
   cluster:
-    fromCluster: NAME_OF_SOURCE_CLUSTER_PACKAGE
+    # Must be match the clusterId of one of the exported cluster
+    fromClusterId: CLUSTER_ID_OF_SOURCE_CLUSTER
     # Must be unique
-    userName: CUSTOM_CLUSTER_NAME
+    clusterId: DEPLOYED_CLUSTER_ID
     # These will be eventually put in a secured store (after MVP1)
     # For MVP1 just store the AWS settings in a fixed vault/secret
     aws:
