--- a/examples/exporter-app-and-cluster.yaml
+++ b/examples/exporter-app-and-cluster.yaml
@@ -1,5 +1,7 @@
-deployer:
+exporter:
   cluster:
+    # Must be unique
+    clusterId: UNIQUE-ID
     server: API-SERVER-URL
     user: USERNAME
     # Must be valid at the moment we export the configuration
