docs: fix typo in examples

--- a/examples/deployer-app-on-unmanaged-cluster.yaml
+++ b/examples/deployer-app-on-unmanaged-cluster.yaml
@@ -33,7 +33,7 @@ deployer:
           value: VALUE-1
         - name: "..."
           value: "..."
-      - configMap: SECRET-2
+      - secret: SECRET-2
         params:
         - name: PARAM-1
           value: VALUE-1
