--- a/examples/deployer-app-and-cluster.yaml
+++ b/examples/deployer-app-and-cluster.yaml
@@ -43,7 +43,7 @@ deployer:
           value: VALUE-1
         - name: "..."
           value: "..."
-      - configMap: SECRET-2
+      - secret: SECRET-2
         params:
         - name: PARAM-1
           value: VALUE-1
