--- a/examples/exporter-app-and-cluster.yaml
+++ b/examples/exporter-app-and-cluster.yaml
@@ -1,33 +1,20 @@
 exporter:
   cluster:
     # Must be unique
-    clusterId: infinity-cluster
-    server: https://api.cluster-b68h9.b68h9.sandbox631.opentlc.com:6443
+    clusterId: UNIQUE-ID
+    server: API-SERVER-URL
     # Must be valid at the moment we export the configuration
-    token: sha256~_PO2Wyq7wtyyIML83OsRxI3RplcQ68X_V3oO9Gv6JVA
+    token: TOKEN
   application:
-    name: infinity
+    name: APP
     namespaces:
-      - name: campaign
+      - name: NS1
         # No default values are generated for each of the following mandatory params
         mandatory-params:
           # Provide the name of one of the exported ConfigMaps
-          - configMap: campaignms-api-config
+          - configMap: MAP-1
             params:
               # Paramaters are given as a list of key names
-              - DB_CONNECTION_URL
-          - configMap: openshift-service-ca.crt
-            params:
-              # Paramaters are given as a list of key names
-              - service-ca.crt
-      - name: arrangement
-        # No default values are generated for each of the following mandatory params
-        mandatory-params:
-          # Provide the name of one of the exported ConfigMaps
-          - configMap: openshift-service-ca.crt
-            params:
-              # Paramaters are given as a list of key names
-              - service-ca.crt
-      - name: adapterms
-        # No default values are generated for each of the following mandatory params
-        mandatory-params: []
+              - PARAM-1
+              - "..."
+              - PARAM-N
