--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "deployer/infra/playbook"]
+[submodule "openshift-playbook"]
 	path = deployer/infra/playbook
 	url = git@github.com:RHEcosystemAppEng/ocp_labs_provisioner.git
