--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,11 +3,7 @@
 
 name: Go
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [workflow_dispatch]
 
 jobs:
 
