--- a/.github/workflows/build_exporter_images.yaml
+++ b/.github/workflows/build_exporter_images.yaml
@@ -1,10 +1,19 @@
 name: Build exporter images
-on: [workflow_dispatch]
+on: 
+  workflow_dispatch:
+    inputs:
+      version:
+        description: Build version
+        default: ${{  github.ref_name }}
+        required: true
+        type:  string
+
 env:
   IMAGE_REGISTRY: quay.io
   IMAGE_NAME: saasi-app-exporter
   IMAGE_REPOSITORY: ecosystem-appeng
   APP_EXPORTER_IMAGE_NAME: saasi-app-exporter
+
 jobs:
   build-image-and-push:
     runs-on: ubuntu-latest
@@ -12,7 +21,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build Docker image and publish
       run: |
-        BUILD_VERSION=${{  github.ref_name }}
+        BUILD_VERSION=${{  inputs.version }}
         echo Build version is: ${BUILD_VERSION}
         IMAGE_FULL=${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}/${{ env.IMAGE_NAME }}:${BUILD_VERSION}
         echo Building image: ${IMAGE_FULL}
