--- a/.github/workflows/build_exporter_images.yaml
+++ b/.github/workflows/build_exporter_images.yaml
@@ -4,7 +4,7 @@ on:
     inputs:
       version:
         description: Build version
-        default: ${{  github.ref_name }}
+        default: dev
         required: true
         type:  string
 
