--- a/.github/workflows/build_exporter_images.yaml
+++ b/.github/workflows/build_exporter_images.yaml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build Docker image and publish
       run: |
-        BUILD_VERSION=${{  github.ref_name }}
+        BUILD_VERSION=${{  inputs.version }}
         echo Build version is: ${BUILD_VERSION}
         IMAGE_FULL=${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_REPOSITORY }}/${{ env.IMAGE_NAME }}:${BUILD_VERSION}
         echo Building image: ${IMAGE_FULL}
